assets/css/styles.css
#navigation {
  position: fixed;
  top: 0;
  right: 0;
  margin-top: 1vh;
  margin-right: 1vh;
  text-align: right;
}

#export {
  margin-bottom: 1rem;
}

#export > img {
  width: 1.6rem;
}

#jump-to-benchmarks, #jump-to-comparisons {
  margin-bottom: 0.1rem;
}

#instructions {
  text-align: center;
  align-items: center;
  justify-content: center;
  display: flex;
  min-height: 100vh;
}

#readme {
  margin-top: 2rem;
  text-align: left;
}

#show-readme {
  margin-right: 1rem;
}

#aggregate {
  min-height: 30vh;
  border-width: 0.1rem;
  border-style: solid;
  border-radius: 1rem;
  margin-top: 2rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

#results {
  margin: 0 5%;
}

#comparisons {
  text-align: center;
}

#chart-metric-comparison {
  margin-top: 3rem;
}

.bench {
  margin-bottom: 5vh;
}

.charts {
  display: flex;
}

.column {
  width: 50%;
}

.crop {
  display: flex;
  justify-content: center;
  align-items: center;
}

.input {
  margin: 0 1% !important;
  border-width: 0.1rem !important;
  border-style: solid !important;
}

select option:checked {
  background-color: rgb(0, 191, 255) !important;
  color: white !important;
}

.chart-metric:focus-visible, #metric:focus-visible, #file-descriptions:focus-visible {
  outline: none !important;
}

#metric, .chart-metric, #file-descriptions {
  overflow: visible !important;
  height: 1.4rem !important;
}

#metric > option, .chart-metric > option, #file-descriptions > option {
  display: table-cell !important;
  padding: 0 0.8rem 0 0.8rem !important;
}

#metric, .input, .chart-metric, #file-descriptions {
  border-color: rgb(206, 212, 218) !important;
}

.chart-metric {
  position: absolute;
  right: 5%;
}

.file-comment {
  outline: none !important;
  border: none !important;
  margin: 0 !important;
  padding: 0 !important;
}

.edit-comment {
  margin-right: 0.8rem;
}

.edit-comment > img {
  width: 1.4rem;
}

.edit-comment:hover, .file-comment:hover, .chart-metric:hover, #metric:hover, #file-descriptions:hover {
  cursor: pointer;
}

td {
  vertical-align: middle;
}

h1 {
  text-align: center;
  margin: 1rem 0;
}

